t/batch/directives/invalid/expected/003-unclosed-multiline.pattern
ValueError: line 8: unterminated multi-line quote at line 4: `--setattr=user.foo="""'
